// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormPasswordWithPlaceholder should clear the value on focus when enabled 1`] = `
<body>
  <div>
    <input
      class="ant-input ant-input-password basic-input-wrapper css-1pd1cd5"
      placeholder="请输入{{name}}"
      type="password"
      value="PASSWORD_TYPE_FIELD_PLACEHOLDER_VALUE"
    />
  </div>
</body>
`;

exports[`FormPasswordWithPlaceholder should clear the value on focus when enabled 2`] = `
<body>
  <div>
    <input
      class="ant-input ant-input-password basic-input-wrapper css-1pd1cd5"
      placeholder="请输入{{name}}"
      type="password"
      value=""
    />
  </div>
</body>
`;

exports[`FormPasswordWithPlaceholder should not react to focus or blur events when disabled 1`] = `
<body>
  <div>
    <input
      class="ant-input ant-input-disabled ant-input-password basic-input-wrapper css-1pd1cd5"
      disabled=""
      placeholder="请输入{{name}}"
      type="password"
      value="PASSWORD_TYPE_FIELD_PLACEHOLDER_VALUE"
    />
  </div>
</body>
`;
